--- a/ArchitBorda_model_v2.ipynb
+++ b/ArchitBorda_model_v2.ipynb
@@ -134,7 +134,7 @@
     }
    ],
    "source": [
-    "model.fit(X_train, y_train)\n"
+    "model.fit(X_train, y_train)"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = model.predict(X_test)\n"
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
